forgot-password api and integrated it in frontend

--- a/HelloDoc_Frontend/src/app/components/authentication/login/login.component.html
+++ b/HelloDoc_Frontend/src/app/components/authentication/login/login.component.html
@@ -87,11 +87,11 @@
       </app-button>
       <span class="cursor-pointer text-center"
         ><a
-          routerLink="/forgot-password"
+          [routerLink]="['/forgot-password']"
           class="forgot-password text-decoration-none"
           >Forgot Password?</a
-        ></span
-      >
+        >
+      </span>
     </form>
   </div>
 </div>
