--- a/HelloDoc_Frontend/src/styles.scss
+++ b/HelloDoc_Frontend/src/styles.scss
@@ -1,4 +1,5 @@
 @import "bootstrap/scss/bootstrap";
+@import "../node_modules/ngx-toastr/toastr.css";
 
 body {
   user-select: none;
@@ -49,6 +50,3 @@ body {
   flex-direction: column;
   gap: 5px;
 }
-
-/* Importing Bootstrap SCSS file. */
-@import "bootstrap/scss/bootstrap";
