--- a/HelloDoc_Frontend/src/styles.scss
+++ b/HelloDoc_Frontend/src/styles.scss
@@ -1,8 +1,14 @@
 @import "bootstrap/scss/bootstrap";
 @import "../node_modules/ngx-toastr/toastr.css";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   user-select: none;
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
 .dark-mode {
