--- a/HelloDoc_Frontend/src/app/components/authentication/forgot-password/forgot-password.component.html
+++ b/HelloDoc_Frontend/src/app/components/authentication/forgot-password/forgot-password.component.html
@@ -63,18 +63,17 @@
         placeholder="Email Address"
         [parentForm]="forgotPasswordForm"
         controlName="email"
-        [validationMsg]="emailValidationMsg"
         icon="bi-envelope"
       ></app-input>
       <app-button
         label="Reset Password"
         title="Reset Password"
         type="submit"
-        className="my-3 login-btn"
+        className="my-3 common-btn"
       >
       </app-button>
       <span class="cursor-pointer text-center">
-        <a routerLink="/" class="back-to-login text-decoration-none"
+        <a routerLink="/login" class="back-to-login text-decoration-none"
           ><i class="bi bi-chevron-left"></i> Back To Login
         </a>
       </span>
