--- a/HelloDoc_Frontend/src/app/components/authentication/site-main-page/site-main-page.component.scss
+++ b/HelloDoc_Frontend/src/app/components/authentication/site-main-page/site-main-page.component.scss
@@ -71,18 +71,11 @@
 }
 
 .submit-request {
-  background-color: #d4d4f9;
-  border-color: #0b0b22 !important;
+  background-color: #01bce9;
 }
 
-.registered-patient {
-  background-color: #f9d4e3;
-  border-color: #e8adc4;
-}
-
-.admin {
-  background-color: #f9d4e3;
-  border-color: #e8adc4;
+.login {
+  background-color: #0d1457;
 }
 
 .button:hover {
