--- a/HelloDoc_Frontend/src/app/shared/components/alphabet-only-input/alphabet-only-input.component.html
+++ b/HelloDoc_Frontend/src/app/shared/components/alphabet-only-input/alphabet-only-input.component.html
@@ -5,7 +5,7 @@
   <input
     #input
     appControlErrors
-    [customErrors]="customErrors"
+    appAlphabetOnly
     [type]="type"
     [class]="className"
     [formControlName]="controlName"
