--- a/HelloDoc_Frontend/src/app/shared/components/button/button.component.scss
+++ b/HelloDoc_Frontend/src/app/shared/components/button/button.component.scss
@@ -13,7 +13,7 @@
   border-radius: 5px;
   padding: 6px 15px;
 }
-.login-btn {
+.common-btn {
   width: 100%;
   height: 40px;
   border: 0;
@@ -22,4 +22,9 @@
   outline: none;
   color: #ffffff;
   cursor: pointer;
+}
+.cancel-btn {
+  background: #ffffff;
+  color: #62b9c8;
+  border: 1.5px solid #62b9c8;
 }
