--- a/HelloDoc_Frontend/src/styles.scss
+++ b/HelloDoc_Frontend/src/styles.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/scss/bootstrap";
 @import "../node_modules/ngx-toastr/toastr.css";
+@import "./assets/styles/input.scss";
 
 * {
   box-sizing: border-box;
@@ -55,4 +56,13 @@ body {
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+form.ng-submitted input.ng-invalid,
+input.ng-touched.ng-invalid,
+form.ng-submitted textarea.ng-invalid,
+textarea.ng-touched.ng-invalid,
+form.ng-submitted select.ng-invalid,
+select.ng-touched.ng-invalid {
+  border: 1px solid red;
 }
