completed verify otp page and integration, resend otp functionality, register provider request api

--- a/HelloDoc_Frontend/src/app/pages/authentication/create-patient/create-patient.component.html
+++ b/HelloDoc_Frontend/src/app/pages/authentication/create-patient/create-patient.component.html
@@ -152,7 +152,7 @@
               [parentForm]="patientInfoForm"
               placeholder="Select Blood Type"
               className="app-select"
-              errorTitle="Me tera khoon pi jaungi"
+              errorTitle="bloodType"
             />
           </div>
           <div class="form-group col-md-6 mt-3">
