--- a/HelloDoc_Frontend/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/HelloDoc_Frontend/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -45,48 +45,43 @@
   <img class="logo" src="assets/logo-dark.png" alt="Logo" *ngIf="isDarkMode" />
   <div class="title_container">
     <p class="title text-center" [ngClass]="{ 'dark-mode': isDarkMode }">
-      Login To Your Account
+      Reset Your Password
     </p>
+    <span class="subtitle" [ngClass]="{ 'dark-mode': isDarkMode }">
+      Please enter your email.
+    </span>
+    <span class="subtitle" [ngClass]="{ 'dark-mode': isDarkMode }">
+      You will receive otp on your mail to create new password.
+    </span>
   </div>
-  <div class="input_container">
+  <div class="input_container" [ngClass]="{ 'dark-mode': isDarkMode }">
     <form
       action=""
       class="d-flex flex-column"
-      [formGroup]="loginForm"
-      (submit)="onLogin()"
+      [formGroup]="forgotPasswordForm"
+      (submit)="onSubmit()"
     >
       <app-input
         class="py-2"
         title="Email"
         type="email"
-        className="input_field py-2 fs-6"
+        className="app-input"
         placeholder="Email Address"
-        [parentForm]="loginForm"
+        [parentForm]="forgotPasswordForm"
+        errorTitle="Email"
         controlName="email"
       ></app-input>
-      <app-input
-        class="py-2"
-        title="Password"
-        type="{{ showPassword ? 'text' : 'password' }}"
-        className="input_field py-2 fs-6"
-        placeholder="Password"
-        [parentForm]="loginForm"
-        controlName="password"
-        (iconClick)="togglePasswordVisibility()"
-      ></app-input>
       <app-button
-        label="Login"
-        title="Login"
+        label="Reset Password"
+        title="Reset Password"
         type="submit"
         className="my-3 common-btn"
       >
       </app-button>
-      <span class="cursor-pointer text-center"
-        ><a
-          [routerLink]="['/forgot-password']"
-          class="forgot-password text-decoration-none"
-          >Forgot Password?</a
-        >
+      <span class="cursor-pointer text-center">
+        <a routerLink="/login" class="back-to-login text-decoration-none"
+          ><i class="bi bi-chevron-left"></i> Back To Login
+        </a>
       </span>
     </form>
   </div>
