--- a/HelloDoc_Frontend/src/app/pages/authentication/login/login.component.html
+++ b/HelloDoc_Frontend/src/app/pages/authentication/login/login.component.html
@@ -45,37 +45,49 @@
   <img class="logo" src="assets/logo-dark.png" alt="Logo" *ngIf="isDarkMode" />
   <div class="title_container">
     <p class="title text-center" [ngClass]="{ 'dark-mode': isDarkMode }">
-      Reset Your Password
+      Login To Your Account
     </p>
   </div>
-  <div class="input_container" [ngClass]="{ 'dark-mode': isDarkMode }">
+  <div class="input_container">
     <form
       action=""
       class="d-flex flex-column"
-      [formGroup]="forgotPasswordForm"
-      (submit)="onSubmit()"
+      [formGroup]="loginForm"
+      (submit)="onLogin()"
     >
       <app-input
         class="py-2"
         title="Email"
         type="email"
-        className="input_field py-2 fs-6"
+        className="app-input"
         placeholder="Email Address"
-        [parentForm]="forgotPasswordForm"
+        [parentForm]="loginForm"
+        errorTitle="Email"
         controlName="email"
-        icon="bi-envelope"
+      ></app-input>
+      <app-input
+        class="py-2"
+        title="Password"
+        type="{{ showPassword ? 'text' : 'password' }}"
+        className="app-input"
+        placeholder="Password"
+        [parentForm]="loginForm"
+        controlName="password"
+        errorTitle="Password"
       ></app-input>
       <app-button
-        label="Reset Password"
-        title="Reset Password"
+        label="Login"
+        title="Login"
         type="submit"
         className="my-3 common-btn"
       >
       </app-button>
-      <span class="cursor-pointer text-center">
-        <a routerLink="/login" class="back-to-login text-decoration-none"
-          ><i class="bi bi-chevron-left"></i> Back To Login
-        </a>
+      <span class="cursor-pointer text-center"
+        ><a
+          [routerLink]="['/forgot-password']"
+          class="forgot-password text-decoration-none"
+          >Forgot Password?</a
+        >
       </span>
     </form>
   </div>
