--- a/HelloDoc_Frontend/src/app/pages/authentication/user-selection/user-selection.component.html
+++ b/HelloDoc_Frontend/src/app/pages/authentication/user-selection/user-selection.component.html
@@ -6,7 +6,7 @@
     <button [routerLink]="['/create-patient']" class="button patient">
       PATIENT
     </button>
-    <button [routerLink]="['/user-selection']" class="button provider">
+    <button [routerLink]="['/create-provider']" class="button provider">
       PROVIDER
     </button>
   </div>
