--- a/HelloDoc_Frontend/src/styles.scss
+++ b/HelloDoc_Frontend/src/styles.scss
@@ -38,9 +38,9 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.logo {
-  max-width: 80%;
-}
+// .logo {
+//   max-width: 80%;
+// }
 
 .title_container {
   display: flex;
