--- a/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,187 @@
 <app-header></app-header>
+<div class="container-fluid">
+  <!-- cards -->
+  <div class="row mt-4">
+    <div
+      class="col-12 col-sm-4 col-md-3 col-l-2 col-lg-2 mb-3"
+      (click)="setActiveCard('New')"
+    >
+      <div
+        class="card new-card"
+        [ngClass]="{ 'new-active': activeCard === 'New' }"
+      >
+        <div class="card-body d-flex flex-column align-items-start">
+          <div class="d-flex align-items-center mb-2">
+            <i class="bi bi-file-earmark-text-fill me-2 card-icon"></i>
+            <h6 class="card-title mb-0">NEW</h6>
+          </div>
+          <p class="card-text mb-0">1452</p>
+        </div>
+        @if (activeCard === 'New') {
+        <div class="arrow new-card-arrow"></div>
+        }
+      </div>
+    </div>
+
+    <div
+      class="col-12 col-sm-4 col-md-3 col-l-2 col-lg-2 mb-3"
+      (click)="setActiveCard('Pending')"
+    >
+      <div
+        class="card pending-card"
+        [ngClass]="{ 'pending-active': activeCard === 'Pending' }"
+      >
+        <div class="card-body d-flex flex-column align-items-start">
+          <div class="d-flex align-items-center mb-2">
+            <i class="bi bi-clock-fill me-2 card-icon"></i>
+            <h6 class="card-title mb-0">PENDING</h6>
+          </div>
+          <p class="card-text mb-0">266</p>
+        </div>
+        @if (activeCard === 'Pending') {
+        <div class="arrow pending-card-arrow"></div>
+        }
+      </div>
+    </div>
+    <div
+      class="col-12 col-sm-4 col-md-3 col-l-2 col-lg-2 mb-3"
+      (click)="setActiveCard('Active')"
+    >
+      <div
+        class="card active-card"
+        [ngClass]="{ 'active-active': activeCard === 'Active' }"
+      >
+        <div class="card-body d-flex flex-column align-items-start">
+          <div class="d-flex align-items-center mb-2">
+            <i class="bi bi-check-circle-fill me-2 card-icon"></i>
+            <h6 class="card-title mb-0">ACTIVE</h6>
+          </div>
+          <p class="card-text mb-0">26</p>
+        </div>
+        @if (activeCard === 'Active') {
+        <div class="arrow active-card-arrow"></div>
+        }
+      </div>
+    </div>
+    <div
+      class="col-12 col-sm-4 col-md-3 col-l-2 col-lg-2 mb-3"
+      (click)="setActiveCard('Conclude')"
+    >
+      <div
+        class="card conclude-card"
+        [ngClass]="{ 'conclude-active': activeCard === 'Conclude' }"
+      >
+        <div class="card-body d-flex flex-column align-items-start">
+          <div class="d-flex align-items-center mb-2">
+            <i class="bi bi-bullseye me-2 card-icon"></i>
+            <h6 class="card-title mb-0">CONCLUDE</h6>
+          </div>
+          <p class="card-text mb-0">1078</p>
+        </div>
+        @if (activeCard === 'Conclude') {
+        <div class="arrow conclude-card-arrow"></div>
+        }
+      </div>
+    </div>
+    <div
+      class="col-12 col-sm-4 col-md-3 col-l-2 col-lg-2 mb-3"
+      (click)="setActiveCard('Close')"
+    >
+      <div
+        class="card close-card"
+        [ngClass]="{ 'close-active': activeCard === 'Close' }"
+      >
+        <div class="card-body d-flex flex-column align-items-start">
+          <div class="d-flex align-items-center mb-2">
+            <i class="bi bi-x-circle me-2 card-icon"></i>
+            <h6 class="card-title mb-0">CLOSE</h6>
+          </div>
+          <p class="card-text mb-0">519</p>
+        </div>
+        @if (activeCard === 'Close') {
+        <div class="arrow close-card-arrow"></div>
+        }
+      </div>
+    </div>
+    <div
+      class="col-12 col-sm-4 col-md-3 col-l-2 col-lg-2 mb-3"
+      (click)="setActiveCard('Unpaid')"
+    >
+      <div
+        class="card unpaid-card"
+        [ngClass]="{ 'unpaid-active': activeCard === 'Unpaid' }"
+      >
+        <div class="card-body d-flex flex-column align-items-start">
+          <div class="d-flex align-items-center mb-2">
+            <i class="bi bi-cash-stack me-2 card-icon"></i>
+            <h6 class="card-title mb-0">UNPAID</h6>
+          </div>
+          <p class="card-text mb-0">16</p>
+        </div>
+        @if (activeCard === 'Unpaid') {
+        <div class="arrow unpaid-card-arrow"></div>
+        }
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-4 mb-4">
+    <div class="col-6">
+      <h5>
+        Patients <span class="text-muted">({{ activeCard }})</span>
+      </h5>
+    </div>
+    <div class="col-6">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search Patients"
+            aria-label="Search Patients"
+          />
+        </div>
+        <select class="form-select mx-3" aria-label="All Regions">
+          <option selected>All Regions</option>
+          <option value="1">Filter 1</option>
+          <option value="2">Filter 2</option>
+          <option value="3">Filter 3</option>
+        </select>
+      </div>
+    </div>
+  </div>
+
+  <!-- table of Contents -->
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Date Of Birth</th>
+        <th scope="col">Requester</th>
+        <th scope="col">Requested Date</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Address</th>
+        <th scope="col">Notes</th>
+        <th scope="col">Chat With</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (item of datasource; track $index) {
+      <tr>
+        <td>
+          {{ item.name }}
+        </td>
+        <td>{{ item.dob }}</td>
+        <td>{{ item.requester }}</td>
+        <td>{{ item.requestedDate }}</td>
+        <td>{{ item.phone }}</td>
+        <td>{{ item.address }}</td>
+        <td>{{ item.notes }}</td>
+        <td>{{ item.chatWith }}</td>
+        <td><button class="btn btn-primary">Actions</button></td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
