--- a/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/patient-list.component.html
+++ b/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/patient-list.component.html
@@ -14,7 +14,7 @@
             <i class="bi bi-file-earmark-text-fill me-2 card-icon"></i>
             <h6 class="card-title mb-0">NEW</h6>
           </div>
-          <p class="card-text mb-0">1452</p>
+          <p class="card-text mb-0">{{ statusCounts.new }}</p>
         </div>
         @if (activeCard === 'New') {
         <div class="arrow new-card-arrow"></div>
@@ -35,7 +35,7 @@
             <i class="bi bi-clock-fill me-2 card-icon"></i>
             <h6 class="card-title mb-0">PENDING</h6>
           </div>
-          <p class="card-text mb-0">266</p>
+          <p class="card-text mb-0">{{ statusCounts.pending }}</p>
         </div>
         @if (activeCard === 'Pending') {
         <div class="arrow pending-card-arrow"></div>
@@ -55,7 +55,7 @@
             <i class="bi bi-check-circle-fill me-2 card-icon"></i>
             <h6 class="card-title mb-0">ACTIVE</h6>
           </div>
-          <p class="card-text mb-0">26</p>
+          <p class="card-text mb-0">{{ statusCounts.active }}</p>
         </div>
         @if (activeCard === 'Active') {
         <div class="arrow active-card-arrow"></div>
@@ -75,7 +75,7 @@
             <i class="bi bi-bullseye me-2 card-icon"></i>
             <h6 class="card-title mb-0">CONCLUDE</h6>
           </div>
-          <p class="card-text mb-0">1078</p>
+          <p class="card-text mb-0">{{ statusCounts.conclude }}</p>
         </div>
         @if (activeCard === 'Conclude') {
         <div class="arrow conclude-card-arrow"></div>
@@ -95,7 +95,7 @@
             <i class="bi bi-x-circle me-2 card-icon"></i>
             <h6 class="card-title mb-0">CLOSE</h6>
           </div>
-          <p class="card-text mb-0">519</p>
+          <p class="card-text mb-0">{{ statusCounts.close }}</p>
         </div>
         @if (activeCard === 'Close') {
         <div class="arrow close-card-arrow"></div>
@@ -115,7 +115,7 @@
             <i class="bi bi-cash-stack me-2 card-icon"></i>
             <h6 class="card-title mb-0">UNPAID</h6>
           </div>
-          <p class="card-text mb-0">16</p>
+          <p class="card-text mb-0">{{ statusCounts.unpaid }}</p>
         </div>
         @if (activeCard === 'Unpaid') {
         <div class="arrow unpaid-card-arrow"></div>
@@ -142,17 +142,25 @@
             (keyup)="onKeyup(searchInput.value)"
           />
         </div>
-        <select class="form-select mx-3" aria-label="All Regions">
-          <option selected>All Regions</option>
-          <option value="1">Filter 1</option>
-          <option value="2">Filter 2</option>
-          <option value="3">Filter 3</option>
+        <select
+          class="form-select mx-3"
+          aria-label="All Regions"
+          (change)="onStatusChange($event)"
+        >
+          <option selected value="All">All Patients</option>
+          <option value="New">New</option>
+          <option value="Pending">Pending</option>
+          <option value="Active">Active</option>
+          <option value="Conclude">Conclude</option>
+          <option value="Close">Close</option>
+          <option value="Unpaid">Unpaid</option>
         </select>
       </div>
     </div>
   </div>
 
   <!-- table of Contents -->
+  @if (getActiveCardCount()) {
   <table class="table table-striped table-bordered">
     <thead class="thead-dark">
       <tr>
@@ -193,7 +201,6 @@
       @for (item of datasource; track $index) {
       <tr>
         <td>{{ item.firstName + " " + item.lastName }}</td>
-        <!-- <td>{{ item.lastName }}</td> -->
         <td>{{ item.email }}</td>
         <td>{{ item.gender === 1 ? "Male" : "Female" }}</td>
         <td>{{ item.role }}</td>
@@ -212,8 +219,8 @@
               Actions
             </span>
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-              <button ngbDropdownItem>Approve Request</button>
-              <button ngbDropdownItem>Decline Request</button>
+              <button ngbDropdownItem>View Case</button>
+              <button ngbDropdownItem>Close Case</button>
               <button ngbDropdownItem>Block Request</button>
             </div>
           </div>
@@ -226,7 +233,7 @@
   <div class="d-flex justify-content-between p-2">
     <ngb-pagination
       [collectionSize]="collectionSize"
-      [(page)]="page"
+      [(page)]="pageIndex"
       [pageSize]="pageSize"
       (pageChange)="getPatientListRequest()"
     >
@@ -244,4 +251,7 @@
       <option [ngValue]="9">9 items per page</option>
     </select>
   </div>
+  } @else {
+  <div class="alert alert-info" role="alert">No records available.</div>
+  }
 </div>
