designed View Case of patient and API for retrieve patient details by Id

--- a/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/patient-list.component.html
+++ b/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/patient-list.component.html
@@ -219,7 +219,9 @@
               Actions
             </span>
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-              <button ngbDropdownItem>View Case</button>
+              <button ngbDropdownItem (click)="viewCase(item.id)">
+                View Case
+              </button>
               <button ngbDropdownItem>Close Case</button>
               <button ngbDropdownItem>Block Request</button>
             </div>
