--- a/HelloDoc_Frontend/src/app/shared/components/alphabet-only-input/alphabet-only-input.component.html
+++ b/HelloDoc_Frontend/src/app/shared/components/alphabet-only-input/alphabet-only-input.component.html
@@ -6,6 +6,7 @@
     #input
     appControlErrors
     appAlphabetOnly
+    class="field"
     [type]="type"
     [class]="className"
     [formControlName]="controlName"
