--- a/HelloDoc_Frontend/src/app/shared/components/input/input.component.html
+++ b/HelloDoc_Frontend/src/app/shared/components/input/input.component.html
@@ -5,6 +5,7 @@
   <input
     #input
     appControlErrors
+    class="field"
     [customErrors]="customErrors"
     [type]="type"
     [class]="className"
