--- a/HelloDoc_Frontend/src/app/shared/components/phone-number-input/phone-number-input.component.html
+++ b/HelloDoc_Frontend/src/app/shared/components/phone-number-input/phone-number-input.component.html
@@ -5,6 +5,7 @@
   <input
     appControlErrors
     appPhoneMask
+    class="field"
     [customErrors]="this.customErrors"
     #input
     type="text"
