--- a/HelloDoc_Frontend/src/app/shared/components/textarea/textarea.component.html
+++ b/HelloDoc_Frontend/src/app/shared/components/textarea/textarea.component.html
@@ -9,6 +9,7 @@
   <textarea
     appControlErrors
     [name]="name"
+    class="field"
     [formControlName]="controlName"
     [cols]="column"
     [rows]="row"
@@ -16,6 +17,7 @@
     [class]="className"
     [placeholder]="placeholder"
     [value]="value"
+    [readonly]="readonly"
     [attr.data-testid]="testId"
   ></textarea>
 </div>
