--- a/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/view-case/view-case.component.html
+++ b/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/view-case/view-case.component.html
@@ -1,25 +1,40 @@
 <div class="container mt-5">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-between align-items-center my-3">
+    <h3>Patient Request</h3>
     <app-button
-      [routerLink]="['/user-selection']"
+      [routerLink]="['/admin-dashboard']"
       label="Back"
       title="Back"
       type="button"
-      className="my-3 ps-2 pe-3 back-btn"
+      className="ps-2 pe-3 back-btn"
       iconClass="bi bi-chevron-left"
     >
     </app-button>
   </div>
   <div class="card mb-5">
-    <div class="card-header">
-      <h3 class="create-patient-heading">Create Patient Account</h3>
-    </div>
     <div class="card-body p-4">
       <form [formGroup]="patientInfoForm" appFormSubmit>
-        <div class="patient-information">
+        <div class="patient-information-section">
           <h5>Patient Information</h5>
+          <span class="d-flex flex-column mt-3">
+            Confirmation Number:
+            <h5 class="confirmation-number">{{ confirmationNumber }}</h5>
+          </span>
         </div>
         <div class="form-row">
+          <div class="form-group col-md-12 mt-3">
+            <app-textarea
+              label="Current Medications (Symptoms)"
+              controlName="currentMedications"
+              [parentForm]="patientInfoForm"
+              className="app-input"
+              placeholder="Current Medications"
+              type="text"
+              errorTitle="Current Medications"
+              testId="currentMedications"
+              [readonly]="true"
+            />
+          </div>
           <div class="form-group col-md-6 mt-3">
             <app-alphabet-only-input
               label="First Name"
@@ -30,6 +45,7 @@
               type="text"
               errorTitle="First Name"
               testId="firstName"
+              [readonly]="true"
             />
           </div>
           <div class="form-group col-md-6 mt-3">
@@ -42,6 +58,7 @@
               type="text"
               errorTitle="Last Name"
               testId="firstName"
+              [readonly]="true"
             />
           </div>
           <div class="form-group col-md-6 mt-3">
@@ -54,23 +71,9 @@
               type="email"
               errorTitle="Email"
               testId="email"
+              [readonly]="true"
             />
           </div>
-          <div class="form-group col-md-6 mt-3">
-            <app-input
-              label="Password"
-              controlName="password"
-              [parentForm]="patientInfoForm"
-              className="app-input"
-              placeholder="Password"
-              type="text"
-              errorTitle="Password"
-              testId="password"
-            />
-          </div>
-        </div>
-
-        <div class="form-row">
           <div class="form-group col-md-6 mt-3">
             <app-phone-number-input
               label="Phone Number"
@@ -80,17 +83,7 @@
               controlName="phoneNumber"
               type="text"
               className="app-input"
-            />
-          </div>
-          <div class="form-group col-md-6 mt-3">
-            <app-select
-              label="Gender"
-              [options]="genderOptions"
-              controlName="gender"
-              [parentForm]="patientInfoForm"
-              placeholder="Select Gender"
-              className="app-select"
-              errorTitle="Gender"
+              [readonly]="true"
             />
           </div>
         </div>
@@ -111,6 +104,7 @@
               type="text"
               errorTitle="City"
               testId="City"
+              [readonly]="true"
             />
           </div>
           <div class="form-group col-md-6 mt-3">
@@ -123,6 +117,7 @@
               controlName="zip"
               class="w-100"
               [maxlength]="6"
+              [readonly]="true"
             />
           </div>
           <div class="form-group col-md-12 mt-3">
@@ -134,6 +129,7 @@
               className="app-textarea title-description"
               errorTitle="Address"
               testId="address"
+              [readonly]="true"
             />
           </div>
         </div>
@@ -145,29 +141,6 @@
         </div>
         <div class="form-row">
           <div class="form-group col-md-6 mt-3">
-            <app-select
-              label="Blood Type"
-              [options]="bloodTypeOptions"
-              controlName="bloodTypeId"
-              [parentForm]="patientInfoForm"
-              placeholder="Select Blood Type"
-              className="app-select"
-              errorTitle="bloodType"
-            />
-          </div>
-          <div class="form-group col-md-6 mt-3">
-            <label class="label--style">Document</label>
-            <input
-              type="file"
-              (change)="handlePictureFileChange($event)"
-              #photoInput
-              id="photoInput"
-              accept="image/*"
-              class="app-input field"
-              formControlName="document"
-            />
-          </div>
-          <div class="form-group col-md-6 mt-3">
             <app-alphabet-only-input
               label="Emergency Contact Name"
               controlName="emergencyContactName"
@@ -177,6 +150,7 @@
               type="text"
               errorTitle="Emergency Contact Name"
               testId="emergencyContactName"
+              [readonly]="true"
             />
           </div>
           <div class="form-group col-md-6 mt-3">
@@ -188,6 +162,20 @@
               controlName="emergencyContactNumber"
               type="text"
               className="app-input"
+              [readonly]="true"
+            />
+          </div>
+          <div class="form-group col-md-12 mt-3">
+            <label class="label--style">Document</label>
+            <input
+              type="file"
+              (change)="handlePictureFileChange($event)"
+              #photoInput
+              id="photoInput"
+              accept="image/*"
+              class="app-input field"
+              formControlName="document"
+              readonly="true"
             />
           </div>
           <div class="form-group col-md-12 mt-3">
@@ -200,6 +188,7 @@
               type="text"
               errorTitle="Medical History"
               testId="medicalHistory"
+              [readonly]="true"
             />
           </div>
           <div class="form-group col-md-12 mt-3">
@@ -212,29 +201,17 @@
               type="text"
               errorTitle="Allergies"
               testId="allergies"
-            />
-          </div>
-          <div class="form-group col-md-12 mt-3">
-            <app-textarea
-              label="Current Medications (Symptoms)"
-              controlName="currentMedications"
-              [parentForm]="patientInfoForm"
-              className="app-input"
-              placeholder="Current Medications"
-              type="text"
-              errorTitle="Current Medications"
-              testId="currentMedications"
+              [readonly]="true"
             />
           </div>
         </div>
 
         <div class="d-flex justify-content-end gap-3">
           <app-button
-            label="Submit"
-            title="Submit"
+            label="Assign"
+            title="Assign"
             type="Submit"
             className="mt-3 px-3 common-btn"
-            (btnClick)="onSubmit()"
           >
           </app-button>
           <app-button
