--- a/HelloDoc_Frontend/src/app/shared/components/select/select.component.html
+++ b/HelloDoc_Frontend/src/app/shared/components/select/select.component.html
@@ -6,11 +6,14 @@
     <ng-content></ng-content>
     <select
       appControlErrors
+      class="field"
       [value]="value"
       [formControlName]="controlName"
       [class]="className"
       [errorTitle]="errorTitle"
       [attr.data-testid]="testId"
+      [attr.aria-readonly]="readonly"
+      [attr.disabled]="readonly ? true : null"
     >
       @if(placeholder){
       <option value="">{{ placeholder }}</option>
