--- a/HelloDoc_Frontend/src/styles.scss
+++ b/HelloDoc_Frontend/src/styles.scss
@@ -11,7 +11,6 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #f9f9f9;
-
 }
 
 .dark-mode {
@@ -64,5 +63,6 @@ select.ng-touched.ng-invalid {
   border: 1px solid red;
 }
 
-/* Importing Bootstrap SCSS file. */
-@import "bootstrap/scss/bootstrap";
+.field {
+  background-color: #f5f5f5 !important;
+}
